Bug 159865 - Font of the drop down menu in Page Size is very low (in NB bar Tabbed UI)
Summary: Font of the drop down menu in Page Size is very low (in NB bar Tabbed UI)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.3 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:24.8.0 target:24.2.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Notebookbar-Tabbed
  Show dependency treegraph
 
Reported: 2024-02-24 05:55 UTC by smsourov.bd
Modified: 2024-02-27 13:50 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
A screenshot of the problem (125.30 KB, image/jpeg)
2024-02-24 05:59 UTC, smsourov.bd
Details
Comparison with dev build. (130.95 KB, image/png)
2024-02-25 05:40 UTC, smsourov.bd
Details
Ubuntu20.04_pageSizeComparison.pngj: 1600x900 (92.97 KB, image/png)
2024-02-26 16:05 UTC, Justin L
Details
DPI information (135.74 KB, image/png)
2024-02-26 16:38 UTC, smsourov.bd
Details

Note You need to log in before you can comment on or make changes to this bug.
Description smsourov.bd 2024-02-24 05:55:46 UTC
Description:
In LibreOffice Writer, the options of the drop down menu in Page Size is almost unreadable. I can hardly see text of the options.

Steps to Reproduce:
1. Open LibreOffice Writer
2. Go to View > User Interface, change it to Tabbed, apply it(Apply to All) and Close.
3. Go to Layout tab and then click the Page Size icon.

Actual Results:
You will see that the font size of the options of the drop down menu is very small. It is not impossible to read but the user will have to struggle for a moment.

Expected Results:
The font size should be bigger like the drop down menu in Orientation or Page Columns or Page Margins.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
OS: Windows 10 Version 22H2
OS Build: 19045.3930
Display resolution: 1920x1080
Scale: 100%
Comment 1 smsourov.bd 2024-02-24 05:59:01 UTC
Created attachment 192742 [details]
A screenshot of the problem
Comment 2 raal 2024-02-24 08:03:17 UTC
Confirm with Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5f0021cdd0b84fccaecf23a014622f0aca86430c
CPU threads: 4; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded Jumbo

Not in Version: 7.3.0.0.alpha1+ / LibreOffice Community
Build ID: 229123ccc6f90ebf66b3e659bebbd53f8a9bdd3a
CPU threads: 4; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded Jumbo
Comment 3 raal 2024-02-24 08:13:18 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-24.2.
Adding Cc: to Justin Luth ; Could you possibly take a look at this one?
Thanks
 2a53cf5649b8c5e93fb98f919d8b9aa6c4d3b3f6 is the first bad commit
commit 2a53cf5649b8c5e93fb98f919d8b9aa6c4d3b3f6
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Tue Jul 18 01:39:34 2023 +0200

    source 1876feb8a8805b2f80537e2828c152ccbdf67fe2

154286: tdf#136905 NBB: let ValueSetWithTextControl set optimal height | https://gerrit.libreoffice.org/c/core/+/154286
Comment 4 V Stuart Foote 2024-02-24 13:05:22 UTC
Kind of seems this should be dupe to bug 136905 as known there that a full refactoring would be needed for the flaky NB bar controls.
Comment 5 Commit Notification 2024-02-24 17:15:01 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/72986a5e505f8b62b30aa890c136e07cef3f9a2b

tdf#159865 tdf#136905 NBB: font looked too small in page size choices

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 smsourov.bd 2024-02-25 05:38:42 UTC
I tried the dev build. The font size is a bit bigger. Hence the texts are a bit more readable. However, I would recommend one more size increase.
Thank you.
Comment 7 smsourov.bd 2024-02-25 05:40:04 UTC
Created attachment 192757 [details]
Comparison with dev build.
Comment 8 Justin L 2024-02-26 16:05:26 UTC
Created attachment 192801 [details]
Ubuntu20.04_pageSizeComparison.pngj: 1600x900

(In reply to smsourov.bd from comment #7)
Wow, your page size area is much smaller than mine. Do you by any chance have a high DPI monitor?

In any case, I think I'll just revert everything since obviously there are many factors at play here.
Comment 9 smsourov.bd 2024-02-26 16:38:17 UTC
Created attachment 192803 [details]
DPI information

(In reply to Justin L from comment #8)

To be honest, I don't know what value does High DPI indicate. I hope this attachment contains the information you are looking for.
Comment 10 Justin L 2024-02-26 16:44:25 UTC
(In reply to smsourov.bd from comment #9)
Just looking for hints as to why the size ratio in your context would be so different from mine. The issue is not that you are 1920x1080, so there must be something else going on. I'm assuming most people don't have it look as small as you do, or it would have been caught in earlier testing.

Anyway, thanks for reporting. I'll just set everything back to the way it was in 7.6. I bet it looked "just about perfect" for you back then. It was "abnormally large" for me.
Comment 11 Commit Notification 2024-02-26 17:56:22 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7c3cdc88337959ddbb9799c4cee57901e94719f3

tdf#159865 Revert "tdf#136905 NBB: let ValueSetWithTextControl set optimal"

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2024-02-27 08:27:59 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/759c9ea8e66b5fc1a362cf914055ac498fbbd80a

tdf#159865 Revert "tdf#136905 NBB: let ValueSetWithTextControl set optimal"

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Justin L 2024-02-27 13:32:20 UTC
Reverted: re-opened bug 137067.
Comment 14 smsourov.bd 2024-02-27 13:50:58 UTC
Thank you for your time and effort.